# JSD

./: Pipfile  README.md  entity.tx  entity_codegen.py  entity_test.py  metamodel.py  requirements.txt  setup.cfg  setup.py  test.ent
SpringR.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dotexport/: entity_meta.dot  person.dot
medication/: .project  pom.xml
medication/src/main/resources/: application.properties
springr_generator/: entity_test.py  generator.py  main.py  model.py
springr_generator/templates/: appProperties.template  formJspPage.template  homeController.template  model.template  service.template
srcgen/: Address.java  Person.java
srcgen/controller/: MedicationController.java  PrescriptionController.java
srcgen/dto/: MedicationDTO.java  PrescriptionDTO.java
srcgen/model/: Address.java  Medication.java  MedicationDTO.java  Person.java  Prescription.java  PrescriptionDTO.java
srcgen/repository/: AddressRepo.java  MedicationRepo.java  MedicationRepository.java  PersonRepo.java  PrescriptionRepo.java  PrescriptionRepository.java
srcgen/service/: MedicationService.java  PrescriptionService.java
srcgen/service/impl/: MedicationServiceImpl.java  PrescriptionServiceImpl.java
templates/: appProperties.template  controller.template  dto.template  formJspPage.template  homeController.template  homePage.template  implService.template  mainClass.template  model.template  navbar.template  pomFile.template  repository.template  service.template  serviceImpl.template  updateFormJspPage.template  viewJspPage.template
(+30 files in other folders)
