[metadata]
name = SpringR
author = Tim 5
license = MIT
description = Spring Boot CRUD app generator
keywords = parser, meta-language, meta-model, language, DSL
url = https://github.com/jelenas97/JSD
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers

[options]
packages = textx
zip_safe = False
install_requires =
    Arpeggio
    click
    Jinja2
    future
include_package_data = True
package_dir =
    springr_generator = springr_generator
setup_requires =
    wheel

[options.extras_require]
dev =
    textX
    click
    Jinja2

[options.entry_points]
textx_generators =
    springr_app = springr_language.main:app_generator
    springr_dot = springr_language.main:dot_generator

textx_languages =
    springr_language = springr_language.main:jsd_lang

[bdist_wheel]
universal=1

[flake8]
ignore = E741,W503
max-line-length = 90
exclude = .git/*,.eggs/*,
          textx/six.py,
          textx/lang.py,
          tests/perf/*,
          build/*,site/*,venv*,
          .ropeproject/*